# musimack-tools

./: .editorconfig  .env.example  .gitignore  README.md
backend/: pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_persistence_create_persistence_foundation.py  0002_durable_execution_add_durable_execution_coordination.py  0003_artifact_storage_add_durable_artifact_storage.py  0004_history_api_add_durable_history_query_support.py  0005_authentication_authorization_add_internal_authentication_and_authorization.py  0006_page_crawl_evidence_add_durable_page_crawl_evidence.py  0007_metadata_audit_add_durable_metadata_audit.py  0008_sitemap_audit_add_durable_sitemap_audit.py  0009_broken_link_redirect_analysis.py  0010_internal_link_analysis.py  0011_blog_strategy_add_bs01_foundation.py  0011_image_alt_text_audit.py  0012_structured_data_audit.py  0013_website_migration_qa.py  0014_durable_result_projection.py  0015_sitemap_recommendation_retention.py  0016_site_audit_settings.py  0017_combined_site_audit_persistence_add_combined_site_audit_persistence.py  0018_combined_site_audit_orchestration_add_combined_site_audit_orchestration.py  __init__.py
backend/src/musimack_tools/: __init__.py  ci.py  main.py
backend/tests/: conftest.py  durable_helpers.py  page_evidence_helpers.py  persistence_helpers.py  qa_sitemap_browser.py
backend/tests/fixtures/: bewell_blog_strategy_bs01.json
backend/tests/integration/: test_application_service.py  test_artifact_storage.py  test_authentication_service_and_api.py  test_blog_strategy_service.py  test_crawl_run_service.py  (+28 more)
(+486 files in other folders)
