[build-system]
requires = ["setuptools==83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "musimack-tools"
version = "0.1.0"
description = "Backend foundation for the Musimack SEO Toolkit."
requires-python = ">=3.14,<3.15"
dependencies = [
    "alembic==1.18.5",
    "beautifulsoup4==4.15.0",
    "fastapi==0.139.0",
    "httpx==0.28.1",
    "lxml==6.1.1",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "SQLAlchemy==2.0.51",
    "uvicorn==0.51.0",
]

[project.optional-dependencies]
dev = [
    "httpx2==2.7.0",
    "mypy==2.3.0",
    "pytest==9.1.1",
    "ruff==0.15.21",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers -ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "BLE",
    "C4",
    "C90",
    "DTZ",
    "E",
    "F",
    "FA",
    "FBT",
    "I",
    "ICN",
    "INP",
    "N",
    "PERF",
    "PIE",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "T10",
    "T20",
    "TC",
    "TRY",
    "UP",
    "W",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201", "INP001", "PLR2004", "S101"]

[tool.mypy]
python_version = "3.14"
files = ["src", "tests"]
strict = true
warn_unreachable = true
warn_unused_configs = true
show_error_codes = true
pretty = true
